# serializer version: 1
# name: TestFinalize.test_conflict
  dict({
    'id': 'conflict',
    'message': 'Subtraction has already been finalized',
  })
# ---
# name: TestFinalize.test_not_found
  dict({
    'id': 'not_found',
    'message': 'Not found',
  })
# ---
# name: TestFinalize.test_success
  dict({
    'count': 100,
    'created_at': 'approximately_now_isoformat',
    'file': dict({
      'id': 1,
      'name': 'test.fq.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.319,
      'c': 0.18,
      'g': 0.18,
      'n': 0.002,
      't': 0.319,
    }),
    'id': 1,
    'job': dict({
      'created_at': 'approximately_now_isoformat',
      'id': 1,
      'progress': 0,
      'state': 'pending',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': 'create_subtraction',
    }),
    'linked_samples': list([
    ]),
    'name': 'foo',
    'nickname': 'bar',
    'ready': True,
    'upload': dict({
      'created_at': 'approximately_now_isoformat',
      'id': 1,
      'name': 'test.fq.gz',
      'ready': True,
      'removed': False,
      'removed_at': None,
      'reserved': False,
      'size': 723988,
      'type': 'subtraction',
      'uploaded_at': 'approximately_now_isoformat',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
  })
# ---
# name: TestUploadSubtractionFileAsJob.test_create
  dict({
    'download_url': '/subtractions/1/files/subtraction.fa.gz',
    'id': 1,
    'name': 'subtraction.fa.gz',
    'size': 1,
    'subtraction': 1,
    'type': 'fasta',
  })
# ---
# name: test_get_from_job
  dict({
    'count': 1,
    'created_at': 'approximately_now_isoformat',
    'file': dict({
      'id': 1,
      'name': 'test.fq.gz',
    }),
    'files': list([
      dict({
        'download_url': '/subtractions/1/files/subtraction.fa.gz',
        'id': 1,
        'name': 'subtraction.fa.gz',
        'size': 36461731,
        'subtraction': 1,
        'type': 'fasta',
      }),
    ]),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'id': 1,
    'job': dict({
      'created_at': 'approximately_now_isoformat',
      'id': 2,
      'progress': 0,
      'state': 'pending',
      'user': dict({
        'handle': 'leeashley',
        'id': 2,
      }),
      'workflow': 'create_subtraction',
    }),
    'linked_samples': list([
    ]),
    'name': 'foo',
    'nickname': 'bar',
    'ready': True,
    'upload': dict({
      'created_at': 'approximately_now_isoformat',
      'id': 1,
      'name': 'test.fq.gz',
      'ready': True,
      'removed': False,
      'removed_at': None,
      'reserved': False,
      'size': 723988,
      'type': 'subtraction',
      'uploaded_at': 'approximately_now_isoformat',
      'user': dict({
        'handle': 'leeashley',
        'id': 2,
      }),
    }),
    'user': dict({
      'handle': 'leeashley',
      'id': 2,
    }),
  })
# ---
